# mailserve

./: .clang-format  CMakeLists.txt  LICENSE
addons/imap/: CMakeLists.txt
addons/smtp/: CMakeLists.txt
mailserve/: CMakeLists.txt
mailserve/inc/mailserve/: mailserve.h
mailserve/inc/mailserve/data/: da.h
mailserve/inc/mailserve/io/: fs.h
mailserve/src/: main.c  server.c  server.h
mailserve/src/io/: fs.c
